--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "^4.1.2"
+psycopg2 = "^2.9.5"
+pillow = "^9.3.0"
 
 
 [build-system]
