--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ psycopg2 = "^2.9.5"
 pillow = "^9.3.0"
 djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.2.2"
+django-pytest = "^0.2.0"
+pytest-django = "^4.5.2"
+pytest-factoryboy = "^2.5.0"
 
 
 [build-system]
